--- a/index.html
+++ b/index.html
@@ -39,12 +39,6 @@
       justify-content: center;
       margin-bottom: 20px;
     }
-    .header svg {
-      width: 32px;
-      height: 32px;
-      margin-right: 10px;
-      fill: var(--primary);
-    }
     .header h1 {
       margin: 0;
       font-size: 1.5rem;
@@ -171,17 +165,14 @@
 <body>
   <div class="card" role="main">
     <div class="header">
-      <svg viewBox="0 0 24 24"><path d="M3 3h8v8H3V3zm2 2v4h4V5H5zm6-2h2v2h-2V3zm4 0h2v2h-2V3zM3 13h8v8H3v-8zm2 2v4h4v-4H5zm6 6h2v2h-2v-2zm4 0h2v2h-2v-2z"/><path fill="none" d="M0 0h24v24H0z"/></svg>
       <h1>QR Code Reader</h1>
     </div>
     <div id="spinnerOverlay" class="spinner-overlay"><div class="spinner"></div></div>
     <label id="dropZone" class="drop-zone" tabindex="0" role="button" aria-label="Drop, click, or paste an image">
-      <svg viewBox="0 0 24 24"><path d="M19 9h-4V3H9v6H5l7 7 7-7z"/><path d="M5 18v2h14v-2H5z"/></svg>
       <p id="dropText">Click or drag & drop an image here</p>
       <input type="file" id="imageUploadInput" accept="image/*" aria-hidden="true">
     </label>
     <button id="cameraButton" class="button" aria-label="Scan with Camera">
-      <svg viewBox="0 0 24 24"><path d="M12 5a7 7 0 0 0-7 7H3l4 4 4-4H9a5 5 0 1 1 5 5v2a7 7 0 0 0-7-7zm0-2a9 9 0 0 1 9 9h2l-4 4-4-4h2a7 7 0 0 0-7-7V5z"/></svg>
       Scan with Camera
     </button>
     <div id="result" class="result" aria-live="polite"></div>
@@ -223,11 +214,11 @@
           const code = jsQR(data, width, height);
           hideSpinner();
           if (code) {
-            resultDiv.innerHTML = '<svg viewBox="0 0 24 24"><path fill="currentColor" d="M9 16.2l-3.5-3.5 1.4-1.4L9 13.4l7.1-7.1 1.4 1.4L9 16.2z"/></svg><span>' + code.data + '</span><button class="copy-btn" aria-label="Copy result">📋</button>';
+            resultDiv.innerHTML = '✓ ' + code.data + ' <button class="copy-btn" aria-label="Copy result">📋</button>';
             resultDiv.classList.add('success');
             resultDiv.querySelector('.copy-btn').addEventListener('click', () => navigator.clipboard.writeText(code.data));
           } else {
-            resultDiv.innerHTML = '<svg viewBox="0 0 24 24"><path fill="currentColor" d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 6a1.5 1.5 0 0 1 1.5 1.5v4a1.5 1.5 0 0 1-3 0v-4A1.5 1.5 0 0 1 12 8zm0 10a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/></svg><span>No QR code found.</span>';
+            resultDiv.innerHTML = '✖ No QR code found.';
             resultDiv.classList.add('error');
           }
         };
@@ -269,14 +260,14 @@
     }
     function stopCamera() {
       scanning = false;
-      cameraButton.disabled = false; cameraButton.innerHTML = '<svg viewBox="0 0 24 24"><path d="M12 5a7 7 0 0 0-7 7H3l4 4 4-4H9a5 5 0 1 1 5 5v2a7 7 0 0 0-7-7zm0-2a9 9 0 0 1 9 9h2l-4 4-4-4h2a7 7 0 0 0-7-7V5z"/></svg>Scan with Camera';
+      cameraButton.disabled = false; cameraButton.innerHTML = 'Scan with Camera';
       if (activeStream) { activeStream.getTracks().forEach(t => t.stop()); activeStream = null; }
       const video = document.querySelector('.card video'); if (video) video.remove();
       hideSpinner();
     }
     function processScanResult(text) {
       hideSpinner(); stopCamera();
-      resultDiv.innerHTML = '<svg viewBox="0 0 24 24"><path fill="currentColor" d="M9 16.2l-3.5-3.5 1.4-1.4L9 13.4l7.1-7.1 1.4 1.4L9 16.2z"/></svg><span>' + text + '</span><button class="copy-btn" aria-label="Copy result">📋</button>';
+      resultDiv.innerHTML = '✓ ' + text + ' <button class="copy-btn" aria-label="Copy result">📋</button>';
       resultDiv.className = 'result success';
       resultDiv.querySelector('.copy-btn').addEventListener('click', () => navigator.clipboard.writeText(text));
     }
