--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
       100% { transform: rotate(360deg); }
     }
     .drop-zone {
-      border: 2px dashed var(--primary);
+      border: 2px dashed #0056b3;
       border-radius: 6px;
       padding: 30px;
       text-align: center;
-      color: var(--primary);
+      color: #0056b3;
       cursor: pointer;
       transition: background-color 0.2s, border-color 0.2s;
       margin-bottom: 20px;
@@ -88,12 +88,12 @@
       width: 48px;
       height: 48px;
       margin-bottom: 10px;
-      fill: var(--primary);
+      fill: currentColor;
     }
     .drop-zone.highlight,
     .drop-zone:focus {
-      background-color: rgba(0,123,255,0.1);
-      border-color: var(--primary);
+      background-color: rgba(0,86,179,0.1);
+      border-color: #0056b3;
       outline: none;
     }
     .button {
@@ -127,7 +127,7 @@
       padding: 15px;
       border: 1px solid transparent;
       border-radius: 6px;
-      display: flex;
+      display: none;
       align-items: center;
       gap: 10px;
       word-break: break-all;
@@ -138,12 +138,12 @@
       flex-shrink: 0;
     }
     .result.success {
-      background: rgba(40,167,69,0.1);
+      background: rgba(40,167,69,0.2);
       border-color: var(--success);
       color: var(--success);
     }
     .result.error {
-      background: rgba(220,53,69,0.1);
+      background: rgba(220,53,69,0.2);
       border-color: var(--error);
       color: var(--error);
     }
@@ -154,6 +154,11 @@
       color: var(--primary);
       margin-left: auto;
       font-size: 1.2rem;
+    }
+    .copy-feedback {
+      margin-left: 10px;
+      color: var(--primary);
+      font-size: 0.9rem;
     }
     @media (max-width: 600px) {
       body { padding: 10px; }
@@ -169,16 +174,19 @@
     </div>
     <div id="spinnerOverlay" class="spinner-overlay"><div class="spinner"></div></div>
     <label id="dropZone" class="drop-zone" tabindex="0" role="button" aria-label="Drop, click, or paste an image">
-      <p id="dropText">Click or drag & drop an image here</p>
+      <p id="dropText">Click, drag & drop, or paste an image here</p>
       <input type="file" id="imageUploadInput" accept="image/*" aria-hidden="true">
     </label>
     <button id="cameraButton" class="button" aria-label="Scan with Camera">
       Scan with Camera
     </button>
+    <button id="cancelButton" class="button" aria-label="Stop scanning" style="display:none; margin-bottom:20px;">Cancel</button>
     <div id="result" class="result" aria-live="polite"></div>
   </div>
   <script src="https://unpkg.com/jsqr/dist/jsQR.js"></script>
   <script>
+    const cancelButton = document.getElementById('cancelButton');
+    cancelButton.addEventListener('click', stopCamera);
     const dropZone = document.getElementById('dropZone');
     const imageInput = document.getElementById('imageUploadInput');
     const cameraButton = document.getElementById('cameraButton');
@@ -201,6 +209,7 @@
       showSpinner();
       resultDiv.textContent = '';
       resultDiv.className = 'result';
+      resultDiv.style.display = 'none';
       const reader = new FileReader();
       reader.onload = () => {
         const img = new Image();
@@ -213,10 +222,20 @@
           const { data, width, height } = ctx.getImageData(0, 0, canvas.width, canvas.height);
           const code = jsQR(data, width, height);
           hideSpinner();
+          resultDiv.style.display = 'flex';
           if (code) {
-            resultDiv.innerHTML = '✓ ' + code.data + ' <button class="copy-btn" aria-label="Copy result">📋</button>';
+            resultDiv.innerHTML = '✓ ' + code.data + ' <button class="copy-btn" aria-label="Copy result" title="Copy result">📋</button>';
             resultDiv.classList.add('success');
-            resultDiv.querySelector('.copy-btn').addEventListener('click', () => navigator.clipboard.writeText(code.data));
+            const copyBtn = resultDiv.querySelector('.copy-btn');
+            copyBtn.addEventListener('click', () => {
+              navigator.clipboard.writeText(code.data).then(() => {
+                const feedback = document.createElement('span');
+                feedback.className = 'copy-feedback';
+                feedback.textContent = 'Copied!';
+                resultDiv.appendChild(feedback);
+                setTimeout(() => feedback.remove(), 2000);
+              });
+            });
           } else {
             resultDiv.innerHTML = '✖ No QR code found.';
             resultDiv.classList.add('error');
@@ -234,6 +253,7 @@
         .then(stream => {
           scanning = true; activeStream = stream;
           cameraButton.disabled = true; cameraButton.textContent = 'Scanning...';
+          cancelButton.style.display = 'block';
           const video = document.createElement('video');
           video.setAttribute('playsinline', '');
           video.srcObject = stream;
@@ -257,19 +277,26 @@
             scanFrame();
           });
         })
-        .catch(() => { hideSpinner(); alert('Camera access denied.'); });
+        .catch(() => {
+          hideSpinner();
+          resultDiv.style.display = 'flex';
+          resultDiv.className = 'result error';
+          resultDiv.innerHTML = '✖ Camera access denied.';
+        });
     }
     function stopCamera() {
       scanning = false;
-      cameraButton.disabled = false; cameraButton.innerHTML = 'Scan with Camera';
+      cameraButton.disabled = false; cameraButton.textContent = 'Scan with Camera';
+      cancelButton.style.display = 'none';
       if (activeStream) { activeStream.getTracks().forEach(t => t.stop()); activeStream = null; }
       const video = document.querySelector('.card video'); if (video) video.remove();
       hideSpinner();
     }
     function processScanResult(text) {
       hideSpinner(); stopCamera();
-      resultDiv.innerHTML = '✓ ' + text + ' <button class="copy-btn" aria-label="Copy result">📋</button>';
+      resultDiv.innerHTML = '✓ ' + text + ' <button class="copy-btn" aria-label="Copy result" title="Copy result">📋</button>';
       resultDiv.className = 'result success';
+      resultDiv.style.display = 'flex';
       resultDiv.querySelector('.copy-btn').addEventListener('click', () => navigator.clipboard.writeText(text));
     }
 
